# citoforte-1.0

./: .gitignore  README.md  pyproject.toml
config/: default.env.example  runtime_settings.test.json
deploy/systemd/: citoforte.service
docs/: setup-hardware.md  setup-software.md  uso.md
scripts/: README.md  bootstrap_orangepi.sh  check_system.sh
src/citoforte/: __init__.py  config.py  main.py  runtime_settings.py
src/citoforte/midi/: device_watcher.py  monitor.py
src/citoforte/web/: __init__.py  server.py
