[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citoforte"
version = "0.1.0"
description = "MIDI USB monitor and bootstrap tooling for Orange Pi Zero"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mido>=1.3.2",
  "python-rtmidi>=1.5.8"
]

[project.scripts]
citoforte-monitor = "citoforte.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
